css/styles.css
html {
  scroll-behavior: smooth;
}

/* Global Styling */

* {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
}

body {
  font-family: Arial, Helvetica, sans-serif;
  font-size: 18px;
}

/* Utils */

.spacer {
  height: 4rem;
}

.container {
  width: 80%;
  max-width: 1080px;
  margin: auto;
}

.clearfix {
  clear: both;
}

/* header */

header h1 {
  text-align: center;
}

/* Navbar */

.navbar {
  background: #333;
  height: 4rem;
  width: 100%;
  padding: 1rem;
  position: fixed;
}

.branding {
  color: #fff;
  float: left;
  padding-top: 0.15rem;
  padding-right: 1rem;
  font-size: 22px;
}

.hamburger-menu {
  float: right;
  outline: none;
  background: none;
  border: none;
  color: #fff;
  font-size: 22px;
  padding-top: 0.25rem;
  padding-right: 0.25rem;
  margin-top: -1.75rem;
  display: none;
}

.main-menu {
  list-style: none;
}

.menu-item {
  padding-left: 1rem;
  padding-top: 0.33rem;
  float: left;
}

.menu-item a {
  color: #ccc;
  text-decoration: none;
}

.menu-item a:hover {
  color: #fff;
}

/* Hero */

.hero {
  height: 50vh;
  background-image: url("https://source.unsplash.com/rnr8D3FNUNY");
  background-size: cover;
  background-repeat: no-repeat;
  background-position: center;
}

/* About */

#about h2 {
  padding: 1rem;
  text-align: center;
  font-weight: lighter;
  text-decoration: underline;
}

#about p {
  margin-top: 1rem;
}

/* High Touch Areas */

.high-touch1,
.high-touch2 {
  margin: 2rem 0;
  width: 49.5%;
  height: 33vh;
  float: left;
  background-position: center;
  background-size: cover;
}

.high-touch1 {
  background-image: url("https://source.unsplash.com/yIAmkXbsRf8");
  margin-right: 4px;
}

.high-touch2 {
  background-image: url("https://source.unsplash.com/l9ig6J4yM94");
}

#about video {
  display: block;
  max-width: 300px;
  margin: 2rem auto;
}

/* prices */

#prices h2 {
  padding-top: 1rem;
  text-align: center;
  font-weight: lighter;
  text-decoration: underline;
}

.tab {
  margin-top: 1rem;
  border: 1px solid #f4f4f4;
  border-bottom: none;
  border-top-left-radius: 7px;
  border-top-right-radius: 7px;
  padding: 1rem;
  float: left;
}

#subscriptions-tab {
  background: #f4f4f4;
}

#prices table {
  padding-top: 1rem;
  width: 100%;
}

#prices table * {
  border-bottom: 1px solid #ccc;
  text-align: center;
  padding: 1rem;
}

#subscriptions-info {
  display: none;
  padding: 2rem 0 0 1rem;
}

#subscriptions-table {
  display: none;
}

/* Contact */

#contact {
  background: #000;
  color: #fff;
}

#contact h2 {
  padding: 1rem;
  text-align: center;
  font-weight: lighter;
}

.numbers {
  float: left;
  color: #fff;
  padding-top: 1rem;
}

.numbers a {
  color: #fff;
}

.whatsapp-button {
  margin-top: 2rem;
  float: right;
  background: #25d366;
  color: #fff;
  padding: 0.5rem;
  font-size: 1.5rem;
  border-radius: 7px;
  text-decoration: none;
}

/* Copyright */

.copyright {
  padding-top: 30vh;
  text-align: center;
}

/* Media Queries */

@media (max-width: 768px) {
  .branding {
    text-align: center;
    float: none;
  }

  .hamburger-menu {
    display: inline;
  }

  .main-menu {
    float: right;
    background: #333;
    height: 100vh;
    padding-top: 3rem;
    margin-right: -2.5rem;
    width: 45vw;
    position: relative;
    z-index: -1;
    display: none;
  }

  .menu-item {
    float: none;
  }

  .high-touch1,
  .high-touch2 {
    float: none;
    width: 100%;
  }

  .tab {
    padding: 0.75rem;
  }
}

